Deleted Misc .js files, fixed na li widths & h3 spacing

--- a/week7/css/responsive.css
+++ b/week7/css/responsive.css
@@ -1,19 +1,17 @@
-@media only screen and (min-width: 876px) and (max-width: 1015px) {
+@media only screen and (min-width: 1016px) {
+	nav li {
+		margin: 0 2.5em;
+	}
+}
+
+
+@media only screen and (max-width: 1015px) {
 	body {
 		font-size: 16px;
 	}
 
-	nav {
-		padding-left: 2em;
-	}
-
-	nav img {
-		margin-top: -12%;
-	}
-
 	nav li {
 		line-height: 1em;
-		text-align: left;
 	}
 
 	#home p {
@@ -36,7 +34,15 @@
 	}
 }
 
-@media only screen and (max-width: 875px) {
+@media only screen and (max-width: 920px) {
+
+	nav li:first-child {
+  		width: 20%;
+	}
+
+}
+
+@media only screen and (max-width: 888px) {
 	body {
 		font-size: 15px;
 	}
@@ -71,7 +77,7 @@
 	}
 
 	#designinfo div:last-child {
-		padding-left: 4em;
+		  padding: 0.25em 5em 2em 6em;
 	}
 
 	#designinfo h2 {
@@ -114,7 +120,7 @@
 	}
 
 	#about h3 {
-		margin: 3% 5% 1%;
+		margin: 4.5% 5% 1%;
 	}
 
 	#about div {
@@ -196,7 +202,7 @@
 	}
 
 	#designinfo div:last-child {
-		padding-left: 0;
+		padding: 2em 0;
 	}
 
 	#designinfo h2 {
@@ -253,7 +259,7 @@
 	}
 
 	#about h3 {
-		margin: 3% 2% 1% 10.5%;
+		margin: 6% 2% 1% 10.5%;
 		font-size: 1.15em;
 	}
 
@@ -356,6 +362,7 @@
 
 	#designinfo h2 {
 		margin-top: 11%;
+		margin-bottom: 5%;
 		text-align: center;
 		font-size: 1.95em;
 	}	
@@ -413,7 +420,7 @@
 	}
 
 	#about h3 {
-		margin: 3% 2% 1% 12%;
+		margin: 7% 2% 1% 12%;
 		font-size: 1.15em;
 	}
 
