--- a/week7/css/style.css
+++ b/week7/css/style.css
@@ -32,7 +32,7 @@ h2 {
 nav img {
 	max-width: 125px;
   width: 100%;
-  margin-top: -8%;
+  margin-top: -12%;
 }
 
 header {
@@ -62,10 +62,10 @@ nav ul {
 }
 
 nav li {
-	width: 20%;
 	float: left;
 	text-align: center;
 	line-height: 1.15em;
+  margin: 0 2em;
 }
 
 nav li:first-child {
@@ -498,7 +498,7 @@ footer p:last-child {
 
 .mobile-nav {
   display: none;
-  padding: .75em 2em;
+  padding: .75em 2em .6em 4em;
 }
 
 .mobile-nav img {
